--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+h4 {
+  margin-top:5px;
+  padding:5px
+}
+
+.main-container {
+  width: 90vw;
+  height: 90vh;
+  margin: auto;
+  border: 1px solid #eee;
+}
+
+.header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pagination {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  height: 10vh;
   align-items: center;
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+  
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  height: 10vh;
+  align-items: center;
+  border-left:1px solid #eee;
+  padding-left: 10px;
+}
+
+.count{
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.countries {
+  width: 90vw;
+  height: 90vh;
+  border: none;
+}
+
+.card{
+  width: 90vw;
+  max-height:1100vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+img {
+  width: 177px;
+}
+
+.each-card {
+  text-align: center;
+  margin: 10px;
+  background-color: white;
+  width: 180px;
+  height: 250px;
+  border: 1px solid #ccc;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
