--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ h4 {
 
 .card{
   width: 90vw;
-  max-height:1100vh;
+  max-height:100vh;
   display: flex;
   flex-wrap: wrap;
 }
@@ -75,4 +75,8 @@ img {
   border: 1px solid #ccc;
   justify-content: center;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.flex-links{
+  display: flex;
+  justify-content: end;
 }
