no-record class added for missing data

--- a/src/App.css
+++ b/src/App.css
@@ -76,14 +76,22 @@ img {
   justify-content: center;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 .flex-links{
   display: flex;
   justify-content: end;
 }
+
 .active{
   background-color: blue;
   color:white;
 }
+
 .disabled{
   color: grey;
+}
+
+.no-record{
+  color:red;
+  font-weight: bold;
 }
