--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,10 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
+  font-family:Tahoma, sans-serif;
 }
 
-h4 {
+h5 {
   margin-top:5px;
   padding:5px
 }
