--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,8 @@ h4 {
 }
 
 .card{
-  width: 90vw;
-  max-height:1100vh;
+  width: 90vw!important;
+  max-height:100vh;
   display: flex;
   flex-wrap: wrap;
 }
